modificações de componentes como os botões para maior universalidade

--- a/frontend/adm_screens/dash_rel/404.html
+++ b/frontend/adm_screens/dash_rel/404.html
@@ -188,105 +188,17 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Tempo médio por setor</h1>
-
-                    <div class="row">
-
-                        <!-- Receita (Monthly) Card Example -->
-                        <div class="col-xl-4 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Preparação </div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">612 min</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fa fa-hand-o-left fa-2x"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Receita (Monthly) Card Example -->
-                        <div class="col-xl-4 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Conferência e Embalagem</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">215 min</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fa fa-list fa-2x"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Receita (Monthly) Card Example -->
-                        <div class="col-xl-4 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Entrega</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">3215 min</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fa fa-truck fa-2x"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-
-                    <div class="row">
-
-                        <div class="col-xl-12 col-lg-7">
-
-                            <!-- Area Chart -->
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-success">Tempo médio de todos os setores por mes de referência</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="chart-area">
-                                        <canvas id="area_0"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                             <!-- Area Chart -->
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-success">Tempo médio de todos os setores por mes de referência</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="chart-area">
-                                        <canvas id="area_0"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
+                    <!-- 404 Error Text -->
+                    <div class="text-center">
+                        <div class="error mx-auto" data-text="404">404</div>
+                        <p class="lead text-gray-800 mb-5">Página não encontrada</p>
+                        <p class="text-gray-500 mb-0">Em contrução...</p>
+                        <a href="index.html">&larr; Voltar para a analise de desempenho</a>
                     </div>
 
                 </div>
                 <!-- /.container-fluid -->
-
             </div>
-            <!-- End of Main Content -->
-
             <!-- FOOTER -->
             <footer class="text-center text-white">
                 <!-- Copyright -->
@@ -346,14 +258,6 @@
 
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
-
-    <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="js/demo/rel_tempo_medio_por_setor/mixed.js"></script>
-    <script src="js/demo/rel_tempo_medio_por_setor/bar.js"></script>
-    <script src="js/demo/rel_tempo_medio_por_setor/area.js"></script>
 
 </body>
 
