--- a/frontend/adm_screens/dash_rel/index.html
+++ b/frontend/adm_screens/dash_rel/index.html
@@ -75,7 +75,7 @@
                     <i class="fa fa-product-hunt"></i>
                     <span>Produtos mais vendidos</span></a>
 
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="404.html">
                     <i class="fa fa-th"></i>
                     <span>Outros</span></a>
 
