--- a/frontend/adm_screens/dash_rel/rel_bairros_mais_atendidos.html
+++ b/frontend/adm_screens/dash_rel/rel_bairros_mais_atendidos.html
@@ -60,11 +60,11 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="rel_tmp_medio_setor.html">
                     <i class="fa fa-clock-o"></i>
                     <span>Tempo médio por setor</span></a>
 
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="rel_bairros_mais_atendidos.html">
                     <i class="fa fa-location-arrow"></i>
                     <span>Bairros mais atendidos</span></a>
                 
@@ -76,7 +76,7 @@
                     <i class="fa fa-product-hunt"></i>
                     <span>Produtos mais vendidos</span></a>
 
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="404.html">
                     <i class="fa fa-th"></i>
                     <span>Outros</span></a>
 
