finalização das telas de rastreamento, tanto para o sistema do cliente quanto administração

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -164,7 +164,7 @@
                                           <div class="form-group">
                                             <p class="card-text offs-text-name text-monospace">Caqui Fuyu Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 19,99</s> por:</div>
-                                            <h5 class="text-success mb-2"><b>R$ 16,99</b> à vista</h5>
+                                            <h5 class="text-success mb-2"><b>R$ 16,99</b><small> à vista</small></h5>
                                             <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
@@ -178,7 +178,7 @@
                                           <div class="form-group">
                                             <p class="card-text offs-text-name text-monospace">Cenoura DeBruin Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 4,99</s> por:</div>
-                                            <h5 class="text-success mb-2"><b>R$ 3,99</b> à vista</h5>
+                                            <h5 class="text-success mb-2"><b>R$ 3,99</b> <small> à vista</small></h5>
                                             <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
@@ -191,7 +191,7 @@
                                           <div class="form-group">
                                             <p class="card-text offs-text-name text-monospace">Cebola Chooury Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 6,29</s> por:</div>
-                                            <h5 class="text-success mb-2"><b>R$ 5,99</b> à vista</h5>
+                                            <h5 class="text-success mb-2"><b>R$ 5,99</b> <small> à vista</small></h5>
                                             <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
@@ -210,7 +210,7 @@
                                         <div class="form-group">
                                           <p class="card-text offs-text-name text-monospace">Pimentão Restib Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 3,59</s> por:</div>
-                                            <h5 class="text-success mb-2"><b>R$ 2,99</b> à vista</h5>
+                                            <h5 class="text-success mb-2"><b>R$ 2,99</b> <small> à vista</small></h5>
                                             <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                         </div>
                                       </div>
@@ -223,7 +223,7 @@
                                       <div class="form-group">
                                         <p class="card-text offs-text-name text-monospace">Laranja Umbigo Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 35,99</s> por:</div>
-                                            <h5 class="text-success mb-2"><b>R$ 33,99</b> à vista</h5>
+                                            <h5 class="text-success mb-2"><b>R$ 33,99</b> <small> à vista</small></h5>
                                             <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                       </div>
                                     </div>
@@ -236,7 +236,7 @@
                                     <div class="form-group">
                                       <p class="card-text offs-text-name text-monospace">Repolho Verde Orgânico</p>
                                       <div class="card-text text-muted"><s>De: R$ 7,99</s> por:</div>
-                                      <h5 class="text-success mb-2"><b>R$ 7,35</b> à vista</h5>
+                                      <h5 class="text-success mb-2"><b>R$ 7,35</b> <small> à vista</small></h5>
                                       <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                     </div>
                                   </div>
@@ -255,7 +255,7 @@
                                           <div class="form-group">
                                             <p class="card-text offs-text-name text-monospace">Tomate Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 6,99</s> por:</div>
-                                            <h5 class="text-success mb-2"><b>R$ R$ 6,29</b> à vista</h5>
+                                            <h5 class="text-success mb-2"><b>R$ R$ 6,29</b> <small> à vista</small></h5>
                                             <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
@@ -268,7 +268,7 @@
                                         <div class="form-group">
                                           <p class="card-text offs-text-name text-monospace">Batata Orgânica</p>
                                           <div class="card-text text-muted"><s>De: R$ 6,99</s> por:</div>
-                                          <h5 class="text-success mb-2"><b>R$ R$ 5,69</b> à vista</h5>
+                                          <h5 class="text-success mb-2"><b>R$ R$ 5,69</b> <small> à vista</small></h5>
                                           <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                         </div>
                                       </div>
@@ -281,7 +281,7 @@
                                           <div class="form-group">
                                             <p class="card-text offs-text-name text-monospace">Banana da Prata</p>
                                             <div class="card-text text-muted"><s>De: R$ 9,99</s> por:</div>
-                                            <h5 class="text-success mb-2"><b>R$ 8,99</b> à vista</h5>
+                                            <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
                                             <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
@@ -308,7 +308,7 @@
           <img class="card-img-top mais-vendidos-img-size" src="img/itens/batata.jpg" alt="Livros em promoção">
              <div class="card-body">
                 <p class="card-text offs-text-name text-monospace">Batatas</p>
-                <h5 class="text-success mb-2"><b>R$ 8,99</b> à vista</h5>
+                <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos1', 'sub');">-</button>
@@ -322,7 +322,7 @@
             <img class="card-img-top mais-vendidos-img-size" src="img/itens/batata.jpg" alt="Livros em promoção">
             <div class="card-body">
                 <p class="card-text offs-text-name text-monospace">Batatas</p>
-                <h5 class="text-success mb-2"><b>R$ 8,99</b> à vista</h5>
+                <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos2', 'sub');">-</button>
@@ -336,7 +336,7 @@
             <img class="card-img-top mais-vendidos-img-size" src="img/itens/batata.jpg" alt="Livros em promoção">
             <div class="card-body">
               <p class="card-text offs-text-name text-monospace">Batatas</p>
-              <h5 class="text-success mb-2"><b>R$ 8,99</b> à vista</h5>
+              <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
               <div class="btn-group" role="group" aria-label="Exemplo básico">
                 <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
                 <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos3', 'sub');">-</button>
@@ -350,7 +350,7 @@
               <img class="card-img-top mais-vendidos-img-size" src="img/itens/cebola.jpg" alt="Livros em promoção">
               <div class="card-body">
                 <p class="card-text offs-text-name text-monospace">Cebolas</p>
-                <h5 class="text-success mb-2"><b>R$ 9,99</b> à vista</h5>
+                <h5 class="text-success mb-2"><b>R$ 9,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos4', 'sub');">-</button>
@@ -364,7 +364,7 @@
               <img class="card-img-top mais-vendidos-img-size" src="img/itens/caqui.jpeg" alt="Livros em promoção">
               <div class="card-body">
                 <p class="card-text offs-text-name text-monospace">Caqui</p>
-                <h5 class="text-success mb-2"><b>R$ 18,99</b> à vista</h5>
+                <h5 class="text-success mb-2"><b>R$ 18,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
                     <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
                     <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos5', 'sub');">-</button>
@@ -378,7 +378,7 @@
             <img class="card-img-top mais-vendidos-img-size" src="img/itens/caqui.jpeg" alt="Livros em promoção">
             <div class="card-body">
               <p class="card-text offs-text-name text-monospace">Caqui</p>
-              <h5 class="text-success mb-2"><b>R$ 18,99</b> à vista</h5>
+              <h5 class="text-success mb-2"><b>R$ 18,99</b> <small> à vista</small></h5>
               <div class="btn-group" role="group" aria-label="Exemplo básico">
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos6', 'sub');">-</button>
@@ -404,7 +404,7 @@
               </a>
                <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Soja em grãos 500g</p>
-                  <h5 class="text-success mb-2"><b>R$ 18,99</b> à vista</h5>
+                  <h5 class="text-success mb-2"><b>R$ 18,99</b> <small> à vista</small></h5>
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
                 </div>
             </div>
@@ -414,7 +414,7 @@
               >
               <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Aveia em flocos 500g</p>
-                  <h5 class="text-success mb-2"><b>R$ 8,89</b> à vista</h5>
+                  <h5 class="text-success mb-2"><b>R$ 8,89</b> <small> à vista</small></h5>
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
               </div>
             </div>
@@ -423,7 +423,7 @@
               <img class="card-img-top news-img" src="img/itens/feijao.jpg" alt="Livros em promoção"/>
               <div class="card-body">
                 <p class="card-text offs-text-name text-monospace">Feijão carioca 500g</p>
-                <h5 class="text-success mb-2"><b>R$ 6,39</b> à vista</h5>
+                <h5 class="text-success mb-2"><b>R$ 6,39</b> <small> à vista</small></h5>
                 <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
               </div>
             </div>
@@ -432,7 +432,7 @@
                 <img class="card-img-top news-img" src="img/itens/quinoa.jpg" alt="Livros em promoção" />
                 <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Quinoa 500g</p>
-                  <h5 class="text-success mb-2"><b>R$ 5,89</b> à vista</h5>
+                  <h5 class="text-success mb-2"><b>R$ 5,89</b> <small> à vista</small></h5>
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>                  
                 </div>
             </div>
@@ -441,7 +441,7 @@
                 <img class="card-img-top news-img" src="img/itens/tapioca.jpg" alt="Livros em promoção"/>
                 <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Tapioca 500g</p>
-                  <h5 class="text-success mb-2"><b>R$ 3,59</b> à vista</h5>
+                  <h5 class="text-success mb-2"><b>R$ 3,59</b> <small> à vista</small></h5>
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
                 </div>
             </div>
