--- a/frontend/produtos-detalhes.html
+++ b/frontend/produtos-detalhes.html
@@ -221,7 +221,7 @@
                               <div class="card-body">
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Castanha do Brasil média 250g</p>
-                                  <h5 class="text-success mb-2"><b>R$ 24,99</b> à vista</h5>
+                                  <h5 class="text-success mb-2"><b>R$ 24,99</b><small> à vista</small></h5>
                                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
@@ -234,7 +234,7 @@
                               <div class="card-body">
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Cravo da Índia 20g</p>
-                                  <h5 class="text-success mb-2"><b>R$ 7,90</b> à vista</h5>
+                                  <h5 class="text-success mb-2"><b>R$ 7,90</b><small> à vista</small></h5>
                                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
@@ -246,7 +246,7 @@
                               <div class="card-body">
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Farinha de trigo especial 500g</p>
-                                  <h5 class="text-success mb-2"><b>R$ 6,90</b> à vista</h5>
+                                  <h5 class="text-success mb-2"><b>R$ 6,90</b><small> à vista</small></h5>
                                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
@@ -264,7 +264,7 @@
                             <div class="card-body">
                               <div class="form-group">
                                 <p class="card-text offs-text-name text-monospace">Farinha de trigo integral 500g</p>
-                                <h5 class="text-success mb-2"><b>R$ 6,90</b> à vista</h5>
+                                <h5 class="text-success mb-2"><b>R$ 6,90</b><small> à vista</small></h5>
                                 <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                               </div>
                             </div>
@@ -276,7 +276,7 @@
                           <div class="card-body">
                             <div class="form-group">
                               <p class="card-text offs-text-name text-monospace">Farinha de mandioca flocada 500g</p>
-                              <h5 class="text-success mb-2"><b>R$ 6,90</b> à vista</h5>
+                              <h5 class="text-success mb-2"><b>R$ 6,90</b><small> à vista</small></h5>
                               <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                             </div>
                           </div>
@@ -288,7 +288,7 @@
                         <div class="card-body">
                           <div class="form-group">
                             <p class="card-text offs-text-name text-monospace">Fubá de milho 500g</p>
-                            <h5 class="text-success mb-2"><b>R$ 6,90</b> à vista</h5>
+                            <h5 class="text-success mb-2"><b>R$ 6,90</b><small> à vista</small></h5>
                             <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                           </div>
                         </div>
@@ -306,7 +306,7 @@
                               <div class="card-body">
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Feijão Preto 500g</p>
-                                  <h5 class="text-success mb-2"><b>R$ 14,90</b> à vista</h5>
+                                  <h5 class="text-success mb-2"><b>R$ 14,90</b><small> à vista</small></h5>
                                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
@@ -318,7 +318,7 @@
                             <div class="card-body">
                               <div class="form-group">
                                 <p class="card-text offs-text-name text-monospace">Feijão Tremoço 500g</p>
-                                <h5 class="text-success mb-2"><b>R$ 8,90</b> à vista</h5>
+                                <h5 class="text-success mb-2"><b>R$ 8,90</b><small> à vista</small></h5>
                                 <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                               </div>
                             </div>
@@ -330,7 +330,7 @@
                               <div class="card-body">
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Açúcar Mascavo 1kg</p>
-                                  <h5 class="text-success mb-2"><b>R$ 17,90</b> à vista</h5>
+                                  <h5 class="text-success mb-2"><b>R$ 17,90</b><small> à vista</small></h5>
                                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
