--- a/frontend/avaliar-compras.html
+++ b/frontend/avaliar-compras.html
@@ -142,7 +142,8 @@
       <h3 class="text-color aling-left text-monospace">Adicione um título:</h3>
       <input type="text" class="form-control aling-left" placeholder="Título do seu comentário" id="inputDefault">
       <h3 class="text-color aling-left text-monospace" >Adicione um comentário:</h3>
-      <textarea class="form-control aling-left" placeholder="Do que você gostou ou não gostou?" id="exampleTextarea" rows="3" spellcheck="false" data-gramm="false"></textarea>              
+      <textarea class="form-control aling-left" placeholder="Do que você gostou ou não gostou?" id="exampleTextarea" rows="3" spellcheck="false" data-gramm="false"></textarea>   
+      <button type="button" class="btn cor-bg-salmao-dark text-uppercase text-white aling-left w-50 mb-2 mt-4">Enviar</button> 
     </div>
     
     <!-- form -->
