Alterando cor de minhas compras

--- a/frontend/minhas-compras.html
+++ b/frontend/minhas-compras.html
@@ -123,7 +123,7 @@
     <div class="container">
         <div class="card" style="margin-top: 50px">
             <div class="row">
-                <p class="text-compras">Compra Nº 0051</p>
+                <p class="text-compras text-color text-monospace">Compra Nº 0051</p>
             </div>
             <div class="card-body">
                 <div class="row align-compras">
@@ -168,6 +168,7 @@
                     <div class="col-md-5">
                       <a href="avaliar-compras.html" class="btn btn-teal my-account-btn">Avaliar compra</a>
                       <a href="rastrear-compras.html" class="btn btn-teal my-account-btn">Rastrear compra</a>
+                      <a href="#" class="btn btn-teal my-account-btn">Comprar novamente</a>
                     </div>
                 </div>
             </div>
@@ -223,6 +224,7 @@
                   <div class="col-md-5">
                     <a href="avaliar-compras.html" class="btn btn-teal my-account-btn">Avaliar compra</a>
                     <a href="rastrear-compras.html" class="btn btn-teal my-account-btn">Rastrear compra</a>
+                    <a href="#" class="btn btn-teal my-account-btn">Comprar novamente</a>
                   </div>
               </div>
           </div>
@@ -236,7 +238,7 @@
           <div class="modal-content">
         <!-- Modal Header -->
             <div class="modal-header">
-              <h4 class="modal-title">Resumo da compra</h4>
+              <h4 class="offs-label text-monospace text-center">Resumo da compra</h4>
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
           
@@ -247,7 +249,7 @@
                     <img class="card-img-top" src="img/itens/pimentao.webp" alt="" style="width:130px"> 
                   </div>
                   <div class="col-md-7">
-                      <h6>Pimentão verde</h6>
+                      <h6 class="offs-label">Pimentão verde</h6>
                       <small style="line-height: 10px;">
                           Receba até 20 de maio<br>
                           Qtd:1<br>
@@ -259,7 +261,7 @@
                   <div class="col-md-5">
                 <img class="card-img-top" src="img/itens/caqui.jpeg" style="width:130px"> </div>
                 <div class="col-md-7">
-                    <h6>Caqui</h6>
+                    <h6 class="offs-label">Caqui</h6>
                     <small style="line-height: 10px;">
                         Receba até 20 de maio<br>
                         Qtd:1<br>
@@ -272,7 +274,7 @@
                   <img class="card-img-top" src="img/itens/laranja.jpg" alt="Laranja" style="width:130px"> 
                 </div>
                 <div class="col-md-7">
-                    <h6>Laranja</h6>
+                    <h6 class="offs-label">Laranja</h6>
                     <small style="line-height: 10px;">
                         Receba até 20 de maio<br>
                         Qtd:1<br>
